--- a/SearchGithubRepository/SearchGithubRepository/BaseCollection/BaseCollectionViewController.storyboard
+++ b/SearchGithubRepository/SearchGithubRepository/BaseCollection/BaseCollectionViewController.storyboard
@@ -26,6 +26,9 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells/>
+                                <connections>
+                                    <outlet property="delegate" destination="Y6W-OH-hqX" id="Cdw-uK-wNm"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
