#1 feat: BaseCollectionView Pagination 을 위한 Activity Indicator Footer 추가, Cell Dequeue 로직 적용

--- a/SearchGithubRepository/SearchGithubRepository/BaseCollection/BaseCollectionViewController.storyboard
+++ b/SearchGithubRepository/SearchGithubRepository/BaseCollection/BaseCollectionViewController.storyboard
@@ -28,6 +28,7 @@
                                 <cells/>
                                 <connections>
                                     <outlet property="delegate" destination="Y6W-OH-hqX" id="Cdw-uK-wNm"/>
+                                    <outlet property="prefetchDataSource" destination="Y6W-OH-hqX" id="wnp-wA-9CC"/>
                                 </connections>
                             </collectionView>
                         </subviews>
