--- a/SearchGithubRepository/SearchGithubRepository/BaseCollection/BaseCollectionViewController.storyboard
+++ b/SearchGithubRepository/SearchGithubRepository/BaseCollection/BaseCollectionViewController.storyboard
@@ -11,7 +11,7 @@
         <!--Base Collection View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="BaseCollectionViewController" customModule="SearchGithubRepository" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="BaseCollectionViewController" id="Y6W-OH-hqX" customClass="BaseCollectionViewController" customModule="SearchGithubRepository" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -42,7 +42,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="collectionView" destination="PwY-R4-pxO" id="XVZ-6L-9dx"/>
+                        <outlet property="collectionView" destination="PwY-R4-pxO" id="Dkl-c6-kMV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
